update for colab using

--- a/notebooks/so-vits-svc-fork-4.2.7.ipynb
+++ b/notebooks/so-vits-svc-fork-4.2.7.ipynb
@@ -138,6 +138,7 @@
       },
       "outputs": [],
       "source": [
+        "# 显示 0% ，实际已经执行完毕，不影响下面的pre-hubert和train\n",
         "!/content/micromamba/envs/sovits/bin/svc pre-config"
       ]
     },
