--- a/notebooks/so-vits-svc-fork-4.2.7.ipynb
+++ b/notebooks/so-vits-svc-fork-4.2.7.ipynb
@@ -3,6 +3,17 @@
     {
       "cell_type": "code",
       "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# step1: Google Drive中有文件夹和文件：so-vits-svc-fork2/dataset/speaker.zip (speaker.zip: 都是 xxx.wav 文件，已切片）\n",
+        "# step2: 点击右上角的 ▼ 按钮 --> 更改运行时类型 --> T4 GPU --> 保存\n",
+        "# step3: 点击最上面👆的 代码执行程序 --> 全部运行"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "VpSdBB-W884B"
       },
@@ -89,7 +100,6 @@
       "source": [
         "!/content/micromamba/envs/sovits/bin/python -m pip install -U pip setuptools wheel\n",
         "!/content/micromamba/envs/sovits/bin/pip install -U torch torchaudio --index-url https://download.pytorch.org/whl/cu121\n",
-        "#!/content/micromamba/envs/sovits/bin/pip install -U so-vits-svc-fork2\n",
         "!/content/micromamba/envs/sovits/bin/pip install -U git+https://github.com/liuzq01/so-vits-svc-fork2.git"
       ]
     },
@@ -112,10 +122,10 @@
       "outputs": [],
       "source": [
         "!mkdir -p \"dataset_raw\"\n",
-        "DATASET_NAME = \"qian_interview\" #@param {type: \"string\"}\n",
-        "# DATASET_NAME.zip: 都是 xxx.wav 文件，已切片\n",
-        "!unzip /content/drive/MyDrive/so-vits-svc-fork2/dataset/{DATASET_NAME}.zip\n",
-        "!cp -R /content/{DATASET_NAME}/ -t \"dataset_raw/\""
+        "speaker = \"qian_interview\" #@param {type: \"string\"}\n",
+        "# speaker.zip: 都是 xxx.wav 文件，已切片\n",
+        "!unzip /content/drive/MyDrive/so-vits-svc-fork2/dataset/{speaker}.zip\n",
+        "!cp -R /content/{speaker}/ -t \"dataset_raw/\""
       ]
     },
     {
@@ -151,8 +161,7 @@
       "outputs": [],
       "source": [
         "# 先修改config.json -->  \"epochs: xxx\"\n",
-        "!/content/micromamba/envs/sovits/bin/svc pre-hubert\n",
-        "#!/content/micromamba/envs/sovits/bin/svc pre-hubert -fm crepe"
+        "!/content/micromamba/envs/sovits/bin/svc pre-hubert -fm crepe"
       ]
     },
     {
@@ -163,36 +172,10 @@
       },
       "outputs": [],
       "source": [
-        "# !/content/micromamba/envs/sovits/bin/svc train --model-path /content/drive/MyDrive/so-vits-svc-fork2/logs/44k"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "collapsed": true,
-        "id": "cW5WrlH-p3BB"
-      },
-      "outputs": [],
-      "source": [
-        "# train 实时打印日志\n",
-        "import subprocess\n",
-        "\n",
-        "cmd = [\n",
-        "    \"/content/micromamba/envs/sovits/bin/svc\",\n",
-        "    \"train\",\n",
-        "    \"--model-path\", \"/content/drive/MyDrive/so-vits-svc-fork2/logs/44k\"\n",
-        "]\n",
-        "\n",
-        "with subprocess.Popen(\n",
-        "    cmd,\n",
-        "    stdout=subprocess.PIPE,\n",
-        "    stderr=subprocess.STDOUT,\n",
-        "    text=True,\n",
-        "    bufsize=1\n",
-        ") as process:\n",
-        "    for line in process.stdout:\n",
-        "        print(line, end='')"
+        "#@title Train\n",
+        "# %load_ext tensorboard\n",
+        "# %tensorboard --logdir drive/MyDrive/so-vits-svc-fork/logs/44k\n",
+        "!/content/micromamba/envs/sovits/bin/svc train --model-path /content/drive/MyDrive/so-vits-svc-fork2/logs/44k"
       ]
     }
   ],
