update colab file

--- a/notebooks/so-vits-svc-fork-4.2.7.ipynb
+++ b/notebooks/so-vits-svc-fork-4.2.7.ipynb
@@ -19,7 +19,7 @@
       },
       "outputs": [],
       "source": [
-        "#@title Check GPU\n",
+        "# Check GPU\n",
         "!nvidia-smi"
       ]
     },
@@ -124,8 +124,7 @@
         "!mkdir -p \"dataset_raw\"\n",
         "speaker = \"qian_interview\" #@param {type: \"string\"}\n",
         "# speaker.zip: 都是 xxx.wav 文件，已切片\n",
-        "!unzip /content/drive/MyDrive/so-vits-svc-fork2/dataset/{speaker}.zip\n",
-        "!cp -R /content/{speaker}/ -t \"dataset_raw/\""
+        "!unzip /content/drive/MyDrive/so-vits-svc-fork2/dataset/{speaker}.zip -d \"dataset_raw/\""
       ]
     },
     {
